# codsnipet

./: .gitignore  Cargo.toml  LICENSE  README.md  example-docker-compose.yml
Formula/: codsnipet.rb
backend/: .dockerignore  Cargo.toml  conf.toml  docker_conf.toml  dockerfile
backend/src/: code.rs  code_dao.rs  config.rs  dao_error.rs  handle.rs  main.rs  models.rs  response.rs
frontend/codesnipet/: README.md  pubspec.yaml
frontend/codesnipet/android/app/: build.gradle
frontend/codesnipet/ios/Runner/: Info.plist
frontend/codesnipet/ios/Runner.xcodeproj/: project.pbxproj
frontend/codesnipet/lib/: main.dart
frontend/codesnipet/lib/controller/: code_controller.dart  crud_code.dart  search_controller.dart  settings_controller.dart
frontend/codesnipet/lib/screens/: screen.dart
frontend/codesnipet/lib/utils/: guard.dart  light_theme.dart  nav_route.dart  screen.dart  text_theme.dart
frontend/codesnipet/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/codesnipet/macos/Runner.xcodeproj/: project.pbxproj
frontend/codesnipet/test/: widget_test.dart
frontend/codesnipet/web/: index.html
frontend/codsnipet/: pubspec.yaml
frontend/codsnipet/ios/Runner/: Info.plist
frontend/codsnipet/ios/Runner.xcodeproj/: project.pbxproj
frontend/codsnipet/lib/: main.dart
frontend/codsnipet/lib/controller/: code_controller.dart  crud_code.dart  (+1 more)
frontend/codsnipet/linux/: CMakeLists.txt  my_application.cc
frontend/codsnipet/snap/: snapcraft.yaml
frontend/codsnipet/web/: index.html  manifest.json
frontend/codsnipet/windows/: CMakeLists.txt
(+40 files in other folders)
