[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.92"
log = "0.4.14"
env_logger = "0.8.4"
chrono = { version = "0.4.10", features = ["serde"] }
config = "0.11.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
log4rs = "1.0.0"
jsonwebtoken = "7"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["async-std-runtime"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "tls"]
